--- a/backend/auth_service/docker-compose.yml
+++ b/backend/auth_service/docker-compose.yml
@@ -1,30 +1,45 @@
-version: "3.8"
-
 services:
+  postgres:
+    image: postgres:16
+    container_name: postgres_database
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: FlowDock
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+  redis:
+    image: redis:7
+    container_name: auth_redis
+    restart: always
+    ports:
+      - "6379:6379"
+
   auth_service:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: auth_service
-    working_dir: /app
-    volumes:
-      - ./:/app
+    restart: always
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: pass
+      POSTGRES_DB: auth_db
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: 5432
+      JWT_SECRET: "your_jwt_secret_here"
+      JWT_ALGORITHM: "HS256"
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+    depends_on:
+      - postgres
+      - redis
     ports:
       - "8000:8000"
-    environment:
-      - APP_ENV=development
-      - SECRET_KEY=change_me
-      - PYTHONUNBUFFERED=1
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8000/ || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    restart: unless-stopped
-    networks:
-      - appnet
 
-networks:
-  appnet:
-    driver: bridge
+volumes:
+  pgdata:
