feat: Implement authentication service with JWT, refresh tokens, and TOTP 2FA
- Added authentication API endpoints (login, refresh, logout, TOTP setup/verify)
- Implemented JWT-based access token generation with configurable expiry
- Added secure refresh token management with rotation and revocation
- Implemented TOTP-based two-factor authentication with QR code provisioning
- Created in-memory user store with password hashing (bcrypt)
- Created in-memory token store for refresh token management
- Updated Docker Compose with PostgreSQL, Redis, and auth service configuration
- Added required dependencies: fastapi, pydantic, python-jose, pyotp, sqlalchemy, psycopg2
- Configured auth schemas and request/response models
- Added security utilities: password hashing, token generation/verification

--- a/backend/auth_service/requirements.txt
+++ b/backend/auth_service/requirements.txt
@@ -2,4 +2,13 @@ fastapi
 uvicorn[standard]
 passlib[bcrypt]
 python-jose
+cryptography
 pydantic
+pydantic[email]
+email-validator
+pyotp
+qrcode
+pillow
+sqlalchemy
+psycopg2-binary
+python-multipart
