--- a/backend/auth_service/docker-compose.yml
+++ b/backend/auth_service/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       POSTGRES_DB: auth_db
       POSTGRES_HOST: postgres
       POSTGRES_PORT: 5432
-      JWT_SECRET: "your_jwt_secret_here"
+      JWT_SECRET: "secret"
       JWT_ALGORITHM: "HS256"
       REDIS_HOST: redis
       REDIS_PORT: 6379
@@ -39,7 +39,7 @@ services:
       - postgres
       - redis
     ports:
-      - "8000:8000"
+      - "8080:8080"
 
 volumes:
   pgdata:
