added argon2 package in requirements.txt

--- a/.gitignore
+++ b/.gitignore
@@ -9797,3 +9797,5 @@ backend/auth_service/app/__pycache__/__init__.cpython-311.pyc
 backend/auth_service/app/__pycache__/main.cpython-311.pyc
 backend/auth_service/app/__pycache__/__init__.cpython-313.pyc
 backend/auth_service/app/__pycache__/main.cpython-313.pyc
+backend/auth_service/Dockerfile
+backend/auth_service/Dockerfile
