Docker now Working

--- a/.gitignore
+++ b/.gitignore
@@ -9799,3 +9799,39 @@ backend/auth_service/app/__pycache__/__init__.cpython-313.pyc
 backend/auth_service/app/__pycache__/main.cpython-313.pyc
 backend/auth_service/Dockerfile
 backend/auth_service/Dockerfile
+.venv/lib/python3.13/site-packages/anyio/__pycache__/__init__.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/__pycache__/from_thread.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/__pycache__/lowlevel.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/__pycache__/pytest_plugin.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/__pycache__/to_thread.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/_core/__pycache__/__init__.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/_core/__pycache__/_contextmanagers.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/_core/__pycache__/_eventloop.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/_core/__pycache__/_exceptions.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/_core/__pycache__/_fileio.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/_core/__pycache__/_resources.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/_core/__pycache__/_signals.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/_core/__pycache__/_sockets.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/_core/__pycache__/_streams.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/_core/__pycache__/_subprocesses.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/_core/__pycache__/_synchronization.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/_core/__pycache__/_tasks.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/_core/__pycache__/_tempfile.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/_core/__pycache__/_testing.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/_core/__pycache__/_typedattr.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/abc/__pycache__/__init__.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/abc/__pycache__/_eventloop.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/abc/__pycache__/_resources.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/abc/__pycache__/_sockets.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/abc/__pycache__/_streams.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/abc/__pycache__/_subprocesses.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/abc/__pycache__/_tasks.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/abc/__pycache__/_testing.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/streams/__pycache__/__init__.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/streams/__pycache__/memory.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/streams/__pycache__/stapled.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/anyio/streams/__pycache__/tls.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/pytest_asyncio/__pycache__/__init__.cpython-313-pytest-9.0.1.pyc
+.venv/lib/python3.13/site-packages/pytest_asyncio/__pycache__/plugin.cpython-313-pytest-9.0.1.pyc
+backend/auth_service/app/tests/__pycache__/test_refresh.cpython-313-pytest-9.0.1.pyc
+backend/auth_service/app/tests/__pycache__/refresh_test.cpython-313-pytest-9.0.1.pyc
