feat(auth): add Google OAuth login and single-session refresh token handling

--- a/backend/auth_service/requirements.txt
+++ b/backend/auth_service/requirements.txt
@@ -5,6 +5,7 @@ python-jose
 cryptography
 pydantic
 pydantic[email]
+pydantic-settings
 email-validator
 pyotp
 qrcode
@@ -15,3 +16,5 @@ python-multipart
 argon2_cffi
 pytest
 httpx
+authlib
+itsdangerous
