feat: Add Media Service implementation with file operations and RabbitMQ integration
- Implement GridFS-based file upload, download, and deletion endpoints
- Add RabbitMQ message publishing for file events (FILE_UPLOADED, FILE_DELETED)
- Create async file service for MongoDB GridFS operations
- Add comprehensive file validation (type, size checks)
- Implement health check and metadata retrieval endpoints
- Add RabbitMQ consumer integration for Core Service quota management
- Configure CORS and logging for production readiness
- Add proper error handling and streaming responses for large files
- Include Docker containerization with optimized Python image
- Add environment-based configuration management

--- a/backend/auth_service/Dockerfile
+++ b/backend/auth_service/Dockerfile
@@ -1,11 +1,22 @@
+# syntax=docker/dockerfile:1.4
 FROM python:3.11-slim
 
 WORKDIR /app
 
+# Copy requirements and install with BuildKit cache mount for faster rebuilds
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN --mount=type=cache,target=/root/.cache/pip pip install -r requirements.txt
 
-COPY . .
+# Copy only the application folder to keep context small
+COPY app/ ./app/
+
+# Create non-root user and give ownership of the app directory
+RUN addgroup --system app \
+	&& adduser --system --ingroup app app \
+	&& chown -R app:app /app
+
+USER app
+
+EXPOSE 8000
 
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
-# CMD ["Fastapi" , "dev", "run"]
