--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,6 +93,8 @@ services:
       REDIS_PORT: 6379
     ports:
       - "8000:8000"
+    volumes:
+      - pipcache:/root/.cache/pip
     networks:
       - flowdock_network
     depends_on:
@@ -105,38 +107,85 @@ services:
       - "traefik.http.routers.auth.rule=Host(`localhost`) && PathPrefix(`/auth`)"
       - "traefik.http.services.auth.loadbalancer.server.port=8000"
 
-  # File Service (Placeholder for future development)
-  # file_service:
-  #   build:
-  #     context: ./backend/file_service
-  #     dockerfile: Dockerfile
-  #   container_name: flowdock_file_service
-  #   restart: always
-  #   environment:
-  #     POSTGRES_USER: postgres
-  #     POSTGRES_PASSWORD: postgres
-  #     POSTGRES_DB: FlowDock
-  #     POSTGRES_HOST: postgres
-  #     POSTGRES_PORT: 5432
-  #     REDIS_HOST: redis
-  #     REDIS_PORT: 6379
-  #   ports:
-  #     - "8001:8000"
-  #   networks:
-  #     - flowdock_network
-  #   depends_on:
-  #     postgres:
-  #       condition: service_healthy
-  #     redis:
-  #       condition: service_healthy
-  #   labels:
-  #     - "traefik.enable=true"
-  #     - "traefik.http.routers.file.rule=Host(`localhost`) && PathPrefix(`/files`)"
-  #     - "traefik.http.services.file.loadbalancer.server.port=8000"
+  # -----------------------------------------------------------------
+  # MONGODB (For Media Service - GridFS)
+  # -----------------------------------------------------------------
+  mongo_meta:
+    image: mongo:7
+    container_name: flowdock_mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: mongopass
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodata:/data/db
+    networks:
+      - flowdock_network
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # -----------------------------------------------------------------
+  # MESSAGE BROKER (RabbitMQ) - NEW for Sprint 2
+  # -----------------------------------------------------------------
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: flowdock_rabbitmq
+    restart: always
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+    ports:
+      - "5672:5672"        # AMQP
+      - "15672:15672"      # Management Dashboard
+    volumes:
+      - rabbitmqdata:/var/lib/rabbitmq
+    networks:
+      - flowdock_network
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # -----------------------------------------------------------------
+  # MEDIA SERVICE (Phase 2) - NEW for Sprint 2
+  # -----------------------------------------------------------------
+  media_service:
+    build:
+      context: ./backend/media_service
+      dockerfile: Dockerfile
+    container_name: flowdock_media_service
+    restart: always
+    environment:
+      MONGO_URL: "mongodb://root:mongopass@mongo_meta:27017"
+      RABBITMQ_URL: "amqp://guest:guest@rabbitmq:5672/"
+    ports:
+      - "8001:8000"
+    volumes:
+      - pipcache:/root/.cache/pip
+    networks:
+      - flowdock_network
+    depends_on:
+      mongo_meta:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.media.rule=Host(`localhost`) && PathPrefix(`/media`)"
+      - "traefik.http.services.media.loadbalancer.server.port=8000"
 
 volumes:
   pgdata:
   redisdata:
+  mongodata:
+  rabbitmqdata:
+  pipcache:
 
 networks:
   flowdock_network:
