--- a/backend/media_service/requirements.txt
+++ b/backend/media_service/requirements.txt
@@ -7,9 +7,12 @@ pydantic==2.5.0
 pydantic-settings==2.1.0
 pymongo==4.6.0
 python-jose[cryptography]==3.3.0
-sqlalchemy
-psycopg2-binary
-passlib
-httpx
-pydantic[email]
-argon2_cffi
+cryptography==41.0.7
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+passlib[bcrypt]==1.7.4
+httpx==0.25.2
+pydantic[email]==2.5.0
+argon2-cffi==23.1.0
+redis==5.0.1
+pytest==7.4.3
