--- a/backend/auth_service/requirements.txt
+++ b/backend/auth_service/requirements.txt
@@ -1,25 +1,25 @@
-fastapi
-uvicorn[standard]
-passlib[bcrypt]
-python-jose
-cryptography
-pydantic
-pydantic[email]
-pydantic-settings
-email-validator
-pyotp
-qrcode
-pillow
-redis
-sqlalchemy
-psycopg2-binary
-python-multipart
-argon2_cffi
-pytest
-httpx
-authlib
-itsdangerous
-pika
-bson
-pymongo
-motor
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
+cryptography==41.0.7
+pydantic==2.5.0
+pydantic-settings==2.1.0
+pydantic[email]==2.5.0
+email-validator==2.1.0
+pyotp==2.9.0
+qrcode==7.4.2
+pillow==10.1.0
+redis==5.0.1
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+python-multipart==0.0.6
+argon2-cffi==23.1.0
+pytest==7.4.3
+httpx==0.25.2
+authlib==1.3.0
+itsdangerous==2.1.2
+pika==1.3.2
+bson==0.5.10
+pymongo==4.6.0
+motor==3.3.2
