API integration commit message

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ RABBITMQ_USER=guest
 RABBITMQ_PASSWORD=guest
 
 # JWT Configuration
-JWT_SECRET=your-super-secret-key-change-this-in-production
+JWT_SECRET=secret
 JWT_ALGORITHM=HS256
 JWT_EXPIRATION=3600
 
