TOTP setup verification during signup and login flows.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,62 +1,17 @@
-
 services:
-  # ============================================================================
-  # Reverse Proxy & Load Balancer
-  # ============================================================================
-
-  traefik:
-    image: traefik:v2.10
-    container_name: flowdock_traefik
-    restart: unless-stopped
-    security_opt:
-      - no-new-privileges:true
-    networks:
-      - flowdock_network
-    ports:
-      - "80:80"
-      - "443:443"
-      - "8080:8080"  # Dashboard (http://localhost:8080/dashboard/)
-    environment:
-      - TRAEFIK_API_DASHBOARD=true
-      - TRAEFIK_ENTRYPOINTS_WEB_ADDRESS=:80
-      - TRAEFIK_PROVIDERS_DOCKER=true
-      - TRAEFIK_PROVIDERS_DOCKER_EXPOSEDBYDEFAULT=false
-      - TRAEFIK_PROVIDERS_DOCKER_NETWORK=flowdock_network
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - traefik_data:/data
-    command:
-      - "--api.insecure=true"
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.web.address=:80"
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.traefik.rule=Host(`localhost`) && PathPrefix(`/dashboard`, `/api`)"
-      - "traefik.http.routers.traefik.entrypoints=web"
-      - "traefik.http.services.traefik.loadbalancer.server.port=8080"
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-
-  # ============================================================================
-  # Infrastructure Services
-  # ============================================================================
-
+  # Database
   postgres:
     image: postgres:16
     container_name: flowdock_postgres
-    restart: unless-stopped
+    restart: always
     environment:
-      POSTGRES_USER: ${DB_USER:-postgres}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
-      POSTGRES_DB: ${DB_NAME:-FlowDock}
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: FlowDock
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
     networks:
       - flowdock_network
     healthcheck:
@@ -64,95 +19,32 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
 
+  # Cache
   redis:
     image: redis:7
     container_name: flowdock_redis
-    restart: unless-stopped
+    restart: always
     ports:
       - "6379:6379"
     volumes:
-      - redis_data:/data
+      - redisdata:/data
     networks:
       - flowdock_network
-    command: redis-server --appendonly yes
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
 
-  rabbitmq:
-    image: rabbitmq:3.13-management-alpine
-    container_name: flowdock_rabbitmq
-    restart: unless-stopped
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-    environment:
-      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER:-guest}
-      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD:-guest}
-    volumes:
-      - rabbitmq_data:/var/lib/rabbitmq
-    networks:
-      - flowdock_network
-    healthcheck:
-      test: rabbitmq-diagnostics -q ping
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-
-  mongodb:
-    image: mongo:7
-    container_name: flowdock_mongodb
-    restart: unless-stopped
-    ports:
-      - "27017:27017"
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER:-root}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD:-mongopass}
-    volumes:
-      - mongodb_data:/data/db
-    networks:
-      - flowdock_network
-    healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-
-  # ============================================================================
-  # Database Administration (Development Only)
-  # ============================================================================
-
+  # Database Admin UI (Development only)
   pgadmin:
-    image: dpage/pgadmin4:latest
+    image: dpage/pgadmin4
     container_name: flowdock_pgadmin
-    restart: unless-stopped
+    restart: always
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL:-admin@flowdock.local}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD:-admin}
-      SCRIPT_NAME: /pgadmin
+      PGADMIN_DEFAULT_EMAIL: admin@pgadmin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
     ports:
       - "5050:80"
     networks:
@@ -160,51 +52,48 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
 
-  # ============================================================================
-  # Application Services
-  # ============================================================================
+  # Reverse Proxy & Load Balancer
+  # traefik:
+  #   image: traefik:v2.10
+  #   container_name: flowdock_traefik
+  #   restart: always
+  #   command:
+  #     - "--api.insecure=true"
+  #     - "--providers.docker=true"
+  #     - "--providers.docker.exposedbydefault=false"
+  #     - "--entrypoints.web.address=:80"
+  #   ports:
+  #     - "80:80"
+  #     - "8080:8080"  # Traefik Dashboard
+  #   volumes:
+  #     - /var/run/docker.sock:/var/run/docker.sock:ro
+  #   networks:
+  #     - flowdock_network
+  #   depends_on:
+  #     - auth_service
 
+  # Authentication Service
   auth_service:
     build:
       context: ./backend/auth_service
       dockerfile: Dockerfile
     container_name: flowdock_auth_service
-    restart: unless-stopped
+    restart: always
     environment:
-      # Database
-      POSTGRES_USER: ${DB_USER:-postgres}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
-      POSTGRES_DB: ${DB_NAME:-FlowDock}
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: FlowDock
       POSTGRES_HOST: postgres
       POSTGRES_PORT: 5432
-      
-      # Security
-      JWT_SECRET: ${JWT_SECRET:-your-super-secret-key-change-this}
-      JWT_ALGORITHM: ${JWT_ALGORITHM:-HS256}
-      JWT_EXPIRATION: ${JWT_EXPIRATION:-3600}
-      
-      # Cache
+      JWT_SECRET: "secret"
+      JWT_ALGORITHM: "HS256"
       REDIS_HOST: redis
       REDIS_PORT: 6379
-      REDIS_DB: ${REDIS_DB:-0}
-      
-      # Message Queue
-      RABBITMQ_HOST: rabbitmq
-      RABBITMQ_PORT: 5672
-      RABBITMQ_USER: ${RABBITMQ_USER:-guest}
-      RABBITMQ_PASSWORD: ${RABBITMQ_PASSWORD:-guest}
-      
-      # Application
-      APP_ENV: ${APP_ENV:-development}
-      LOG_LEVEL: ${LOG_LEVEL:-INFO}
     ports:
       - "8000:8000"
+    volumes:
+      - pipcache:/root/.cache/pip
     networks:
       - flowdock_network
     depends_on:
@@ -212,146 +101,98 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-      rabbitmq:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.auth.rule=Host(`localhost`) && PathPrefix(`/auth`)"
-      - "traefik.http.routers.auth.entrypoints=web"
       - "traefik.http.services.auth.loadbalancer.server.port=8000"
 
+  # -----------------------------------------------------------------
+  # MONGODB (For Media Service - GridFS)
+  # -----------------------------------------------------------------
+  mongo_meta:
+    image: mongo:7
+    container_name: flowdock_mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: mongopass
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodata:/data/db
+    networks:
+      - flowdock_network
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # -----------------------------------------------------------------
+  # MESSAGE BROKER (RabbitMQ) - NEW for Sprint 2
+  # -----------------------------------------------------------------
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: flowdock_rabbitmq
+    restart: always
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+    ports:
+      - "5672:5672"        # AMQP
+      - "15672:15672"      # Management Dashboard
+    volumes:
+      - rabbitmqdata:/var/lib/rabbitmq
+    networks:
+      - flowdock_network
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # -----------------------------------------------------------------
+  # MEDIA SERVICE (Phase 2) - NEW for Sprint 2
+  # -----------------------------------------------------------------
   media_service:
     build:
       context: ./backend/media_service
       dockerfile: Dockerfile
     container_name: flowdock_media_service
-    restart: unless-stopped
+    restart: always
     environment:
-      # Database
-      POSTGRES_USER: ${DB_USER:-postgres}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
-      POSTGRES_DB: ${DB_NAME:-FlowDock}
+      MONGO_URL: "mongodb://root:mongopass@mongo_meta:27017"
+      RABBITMQ_URL: "amqp://guest:guest@rabbitmq:5672/"
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: FlowDock
       POSTGRES_HOST: postgres
       POSTGRES_PORT: 5432
-      
-      # MongoDB
-      MONGO_URL: ${MONGO_URL:-mongodb://root:mongopass@mongodb:27017}
-      MONGO_DB: ${MONGO_DB:-flowdock_media}
-      
-      # Security
-      JWT_SECRET: ${JWT_SECRET:-your-super-secret-key-change-this}
-      JWT_ALGORITHM: ${JWT_ALGORITHM:-HS256}
-      
-      # Cache
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      REDIS_DB: ${REDIS_DB:-1}
-      
-      # Message Queue
-      RABBITMQ_HOST: rabbitmq
-      RABBITMQ_PORT: 5672
-      RABBITMQ_USER: ${RABBITMQ_USER:-guest}
-      RABBITMQ_PASSWORD: ${RABBITMQ_PASSWORD:-guest}
-      
-      # File Storage
-      MAX_FILE_SIZE: ${MAX_FILE_SIZE:-104857600}
-      ALLOWED_EXTENSIONS: ${ALLOWED_EXTENSIONS:-pdf,doc,docx,xls,xlsx,ppt,pptx,jpg,jpeg,png,gif,txt,zip,rar}
-      
-      # Application
-      APP_ENV: ${APP_ENV:-development}
-      LOG_LEVEL: ${LOG_LEVEL:-INFO}
+      AUTH_SERVICE_URL: "http://auth_service:8000"
+      JWT_SECRET: "secret"
+      JWT_ALGORITHM: "HS256"
     ports:
       - "8001:8000"
+    volumes:
+      - pipcache:/root/.cache/pip
     networks:
       - flowdock_network
     depends_on:
-      postgres:
-        condition: service_healthy
-      redis:
+      mongo_meta:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
-      mongodb:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.media.rule=Host(`localhost`) && PathPrefix(`/media`)"
-      - "traefik.http.routers.media.entrypoints=web"
       - "traefik.http.services.media.loadbalancer.server.port=8000"
 
-  # ============================================================================
-  # Frontend
-  # ============================================================================
-
-  # frontend:
-  #   build:
-  #     context: ./frontend
-  #     dockerfile: Dockerfile
-  #   container_name: flowdock_frontend
-  #   restart: unless-stopped
-  #   networks:
-  #     - flowdock_network
-  #   depends_on:
-  #     - auth_service
-  #     - media_service
-  #     - traefik
-  #   environment:
-  #     # API URLs - Point to Traefik gateway
-  #     - VITE_AUTH_API_URL=http://localhost/auth
-  #     - VITE_MEDIA_API_URL=http://localhost/media
-  #   labels:
-  #     - "traefik.enable=true"
-  #     - "traefik.http.routers.frontend.rule=Host(`localhost`) && PathPrefix(`/`) && !PathPrefix(`/auth`, `/media`, `/dashboard`, `/api`)"
-  #     - "traefik.http.routers.frontend.entrypoints=web"
-  #     - "traefik.http.services.frontend.loadbalancer.server.port=5173"
-  #     # Enable middleware for SPA (catch-all routing)
-  #     - "traefik.http.middlewares.frontend-redirect.redirectregex.regex=^http://localhost/(?!auth|media|dashboard|api).*$$"
-  #     - "traefik.http.middlewares.frontend-redirect.redirectregex.replacement=http://localhost/"
-  #   healthcheck:
-  #     test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:5173"]
-  #     interval: 30s
-  #     timeout: 10s
-  #     retries: 3
-  #     start_period: 30s
-  #   logging:
-  #     driver: "json-file"
-  #     options:
-  #       max-size: "10m"
-  #       max-file: "3"
-
 volumes:
-  postgres_data:
-    driver: local
-  redis_data:
-    driver: local
-  rabbitmq_data:
-    driver: local
-  mongodb_data:
-    driver: local
-  traefik_data:
-    driver: local
+  pgdata:
+  redisdata:
+  mongodata:
+  rabbitmqdata:
+  pipcache:
 
 networks:
   flowdock_network:
