--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.555.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.0"
