--- a/.gitignore
+++ b/.gitignore
@@ -19245,3 +19245,52 @@ frontend/node_modules/zod-validation-error/v4/index.mjs
 frontend/node_modules/zod-validation-error/v4/index.mjs.map
 BACKEND_ARCHITECTURE.md
 CHANGES_CHECKLIST.md
+backend/auth_service/app/tests/__pycache__/__init__.cpython-313.pyc
+backend/auth_service/app/tests/__pycache__/conftest.cpython-313-pytest-7.4.3.pyc
+backend/auth_service/app/tests/__pycache__/conftest.cpython-313-pytest-9.0.2.pyc
+backend/auth_service/app/tests/__pycache__/test_auth.cpython-313-pytest-7.4.3.pyc
+backend/auth_service/app/tests/__pycache__/test_services.cpython-313-pytest-7.4.3.pyc
+backend/auth_service/app/tests/__pycache__/test_users.cpython-313-pytest-7.4.3.pyc
+backend/auth_service/app/__pycache__/database.cpython-313.pyc
+backend/auth_service/app/infrastructure/__pycache__/__init__.cpython-313.pyc
+backend/auth_service/app/infrastructure/database/__pycache__/__init__.cpython-313.pyc
+backend/auth_service/app/infrastructure/database/__pycache__/models.cpython-313.pyc
+backend/auth_service/app/infrastructure/database/__pycache__/repositories.cpython-313.pyc
+backend/auth_service/app/infrastructure/email/__pycache__/__init__.cpython-313.pyc
+backend/auth_service/app/infrastructure/email/__pycache__/email.cpython-313.pyc
+backend/auth_service/app/infrastructure/security/__pycache__/__init__.cpython-313.pyc
+backend/auth_service/app/infrastructure/security/__pycache__/security.cpython-313.pyc
+backend/auth_service/app/infrastructure/security/__pycache__/token_store.cpython-313.pyc
+backend/auth_service/app/infrastructure/security/__pycache__/totp.cpython-313.pyc
+backend/auth_service/app/domain/__pycache__/__init__.cpython-313.pyc
+backend/auth_service/app/domain/__pycache__/entities.cpython-313.pyc
+backend/auth_service/app/domain/__pycache__/interfaces.cpython-313.pyc
+backend/auth_service/app/__pycache__/database.cpython-313.pyc
+backend/auth_service/app/__pycache__/database.cpython-313.pyc
+backend/auth_service/app/__pycache__/database.cpython-313.pyc
+backend/auth_service/app/application/__pycache__/__init__.cpython-313.pyc
+backend/auth_service/app/application/__pycache__/dtos.cpython-313.pyc
+backend/auth_service/app/application/__pycache__/quota_service.cpython-313.pyc
+backend/auth_service/app/application/__pycache__/services.cpython-313.pyc
+backend/auth_service/app/application/__pycache__/twofa_service.cpython-313.pyc
+backend/auth_service/app/application/__pycache__/user_util_service.cpython-313.pyc
+backend/auth_service/app/core/__pycache__/__init__.cpython-313.pyc
+backend/auth_service/app/core/__pycache__/config.cpython-313.pyc
+backend/auth_service/app/presentation/dependencies.py
+backend/auth_service/app/presentation/__pycache__/__init__.cpython-313.pyc
+backend/auth_service/app/presentation/__pycache__/dependencies.cpython-313.pyc
+backend/auth_service/app/presentation/api/auth.py
+backend/auth_service/app/presentation/api/__pycache__/__init__.cpython-313.pyc
+backend/auth_service/app/presentation/api/__pycache__/auth.cpython-313.pyc
+backend/auth_service/app/presentation/api/__pycache__/users.cpython-313.pyc
+backend/auth_service/app/presentation/dependencies.py
+backend/auth_service/app/presentation/__pycache__/dependencies.cpython-313.pyc
+backend/auth_service/app/presentation/api/auth.py
+backend/auth_service/app/presentation/__pycache__/dependencies.cpython-313.pyc
+backend/auth_service/app/core/__pycache__/__init__.cpython-313.pyc
+backend/auth_service/app/core/__pycache__/config.cpython-313.pyc
+backend/auth_service/app/__pycache__/database.cpython-313.pyc
+backend/auth_service/app/core/__pycache__/__init__.cpython-313.pyc
+backend/auth_service/app/core/__pycache__/config.cpython-313.pyc
+backend/auth_service/app/core/__pycache__/__init__.cpython-313.pyc
+backend/auth_service/app/presentation/__pycache__/dependencies.cpython-313.pyc
